<resources>
    <string name="app_name">QicFixApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="base_url">http://ec2-52-23-209-16.compute-1.amazonaws.com:8080/QicFixSystem/ws</string>
    <string name="database_name">qicfixdb</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="registration">Registration</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone #</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="credit_card">Credit Card #</string>
    <integer name="database_version">1</integer>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tower_home">TowerHome</string>
    <string name="service_id">Service ID</string>
    <string name="client_id">Client ID</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="destination_address">Destination Address</string>
    <string name="about_client">About Client</string>
    <string name="cost">Cost</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="company_name">Company Name</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="accept_service">Accept Service</string>
    <string name="logout">Logout</string>

</resources>
