<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.qicfix.qicfixapp.Tower.CurrentService">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/currentServiceIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_id"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/currentServiceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12345678"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/currentServiceClientIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_id"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/currentServiceClientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/currentServiceClientDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_client"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/currentServiceClientDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Peter Clarke drives an awesome car"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/currentServicePickUpAddressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/currentServicePickUpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123 Fake Street Miami, FL 33180"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/currentServiceDestinationAddressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/currentServiceDestinationAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="456 Fake Street Orlando, FL 22180"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/currentServiceClientCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/currentServiceClientCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$100.31"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"/>


    </LinearLayout>
</ScrollView>
